--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,16 @@
 # BlueJ files
 *.ctxt
 
+# Eclipse files
+/.project
+/.classpath
+/.settings
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Build Files
+/target
 *.jar
 *.war
 *.nar
