--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
-language: java
 os: linux
+language: java
+jdk: openjdk8
 services:
   - docker
-branches:
-    only:
-      - master
-      - /^release/.*$/
+
+install:
+  - cp .travis.settings.xml ${HOME}/.m2/settings.xml
+
+before_script:
+  - if [ "${TRAVIS_BRANCH}" = "master" ]; then mvn version:set -DremoveSnapshot=true; else echo "Leaving version as SNAPSHOT"; fi
+
+script:
+  - mvn verify
 
 deploy:
-  provider: script	
-  script: "./.travis.deploy.sh"
+  - provider: script
+    skip_cleanup: true
+    script: "mvn deploy -Dmaven.test.skip=true"
+    on:
+      all_branches: true
+      condition: ${TRAVIS_BRANCH} =~ ^((release\/.*)|(master))$
