--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - cp .travis.settings.xml ${HOME}/.m2/settings.xml
 
 before_script:
-  - if [ "${TRAVIS_BRANCH}" = "master" ]; then mvn version:set -DremoveSnapshot=true; else echo "Leaving version as SNAPSHOT"; fi
+  - if [ "${TRAVIS_BRANCH}" = "master" ]; then mvn versions:set -DremoveSnapshot=true; else echo "Leaving version as SNAPSHOT"; fi
 
 script:
   - mvn verify
