--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 os: linux
 language: java
 jdk: openjdk8
+
 services:
   - docker
 
 install:
+  - openssl aes-256-cbc -K $encrypted_99693b848002_key -iv $encrypted_99693b848002_iv -in signing-key.gpg.enc -out signing-key.gpg -d
   - cp .travis.settings.xml ${HOME}/.m2/settings.xml
 
 before_script:
@@ -18,8 +20,8 @@ after_success:
 
 deploy:
   - provider: script
-    skip_cleanup: true
-    script: "mvn deploy -Dmaven.test.skip=true"
+    cleanup: false
+    script: mvn deploy -Dmaven.test.skip=true
     on:
       all_branches: true
-      condition: ${TRAVIS_BRANCH} =~ ^((release\/.*)|(master))$
+      condition: "${TRAVIS_BRANCH} =~ ^((release\\/.*)|(master))$"
