--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ services:
   - docker
 
 install:
-  - openssl aes-256-cbc -k $GPG_ENCRYPTION_KEY -in .signing-key.gpg.enc -out signing-key.gpg -d
-  - pgp --import signing-key.gpg
+  - openssl aes-256-cbc -in .signing-key.gpg.enc -out signing-key.gpg -d -pass pass:$GPG_ENCRYPTION_KEY -md sha256
+  - gpg --import signing-key.gpg
   - rm signing-key.gpg
   - cp .travis.settings.xml ${HOME}/.m2/settings.xml
 
@@ -22,7 +22,7 @@ after_success:
 
 deploy:
   - provider: script
-    cleanup: false
+    skip_cleanup: true
     script: mvn deploy -Dmaven.test.skip=true
     on:
       all_branches: true
