--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<artifactId>jsemver</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
-	<name>Jsemver</name>
+	
+	<name>JSemVer</name>
 	<description>
 		JSemVer is a Java based parser and comparator implementing the Semantic Versioning 2.0.0. 
 		It also includes support for NPM like version range selectors.
